[package]
name = "untitled1"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.9"
rmp-serde = "0.14.4"
serde = {version = "1.0.117", features = ["serde_derive"]}
byteorder = "1.3.4"