[package]
name = "vented"
description = "Event driven encrypted tcp communicaton"
version = "0.11.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["tcp", "cryptography", "events"]
repository = "https://github.com/trivernis/vented"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.9"
rmp-serde = "0.14.4"
serde = { version = "1.0.117", features = ["serde_derive"] }
byteorder = "1.3.4"
parking_lot = "0.11.0"
log = "0.4.11"
crypto_box = "0.5.0"
rand = "0.7.3"
sha2 = "0.9.2"
generic-array = "0.14.4"
typenum = "1.12.0"
x25519-dalek = "1.1.0"
crossbeam-utils = "0.8.0"
async-std = "1.7.0"

[dev-dependencies]
simple_logger = "1.11.0"